[gd_scene load_steps=3 format=4 uid="uid://c4cxl5ec7iret"]

[ext_resource type="PackedScene" uid="uid://ch1hh04p5qvav" path="res://Prefab/GUI/LevelEditor/Inspector/Properties/Type/Base/PropertiesBase.tscn" id="1"]
[ext_resource type="Script" uid="uid://cvj5qm2xo4gf" path="res://Prefab/GUI/LevelEditor/Inspector/Properties/Type/Enum/PropertiesEnum.gd" id="2"]

[node name="PropertiesEnum" instance=ExtResource("1")]
light_mask = 0
offset_right = 109.0
offset_bottom = 31.0
script = ExtResource("2")

[node name="OptionButton" type="OptionButton" parent="HBoxContainer" index="0"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 16
clip_text = true

[connection signal="item_selected" from="HBoxContainer/OptionButton" to="." method="ValueChange"]
